Began fixing spacing issues with projects

--- a/src/components/HomePage/Home.module.css
+++ b/src/components/HomePage/Home.module.css
@@ -49,7 +49,7 @@
 .headshot-container {
   height: 300px;
   width: 300px;
-  background: url("../../assets/images/current-cj-image.jpg");
+  background: url('../../assets/images/current-cj-image.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   border-radius: 50%;
@@ -134,7 +134,7 @@
 
   .description h1 {
     font-size: 2.75rem;
-    margin-top: 20px;
+    /* margin-top: 20px; */
   }
 
   .description p {
