--- a/src/components/PortfolioPage/Portfolio.module.css
+++ b/src/components/PortfolioPage/Portfolio.module.css
@@ -28,7 +28,6 @@
   font-weight: normal;
   line-height: 1;
   margin: 0;
-  float: left;
   color: #fff;
   text-shadow: 3px 3px #000000;
 }
@@ -85,18 +84,6 @@
 /* Python */
 .python-active {
   color: rgba(255, 210, 62, 1) !important;
-}
-
-.python:hover {
-  color: rgba(255, 210, 62, 1);
-  /* background: -moz-linear-gradient(90deg, rgba(52,113,162,1) 0%, rgba(52,113,162,1) 38%, rgba(255,210,62,1) 100%);
-    background: -webkit-linear-gradient(90deg, rgba(52,113,162,1) 0%, rgba(52,113,162,1) 38%, rgba(255,210,62,1) 100%);
-    background-image: linear-gradient(90deg, rgba(52,113,162,1) 0%, rgba(52,113,162,1) 38%, rgba(255,210,62,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#3471a2",endColorstr="#ffd23e",GradientType=1); */
-  /* background-image: linear-gradient(to right, rgba(52,113,162,1), rgba(255,210,62,1)); */
-  /* color: transparent; */
-  /* -webkit-background-clip: text;
-    background-clip: text; */
 }
 
 /* HTML */
@@ -311,7 +298,7 @@
   border: 2px solid white;
   box-shadow: 0px -2px 2px black;
   overflow: hidden;
-  height: 400px;
+  height: 420px;
   position: relative;
   z-index: 0;
 }
@@ -350,8 +337,7 @@
 }
 
 .projectItemHeader h2 {
-  margin-top: 8px;
-  margin-bottom: 0;
+  margin: 5px 0;
   font-size: 2rem;
   color: dodgerblue;
   text-shadow: -2px 2px 1px black;
@@ -359,7 +345,7 @@
 
 .projectItemHeader > h6 {
   margin: 0;
-  /* margin-top: -14px; */
+  margin-top: -14px;
   color: yellow;
   font-size: 0.85rem;
 }
@@ -420,7 +406,7 @@
 
 .projectStack h6 {
   margin: 0;
-  margin-bottom: 12px;
+  margin-bottom: 8px;
   font-size: 1.2rem;
   text-shadow: -2px 2px 1px black;
 }
@@ -440,8 +426,16 @@
     align-items: center;
   }
 
+  .portfolioActions p {
+    margin: 5px 0 10px !important;
+  }
+
   .portfolio-content {
     padding: 0 20px;
+  }
+
+  .portfolioItem {
+    width: 100%;
   }
 
   .projectItemHeader {
@@ -452,7 +446,7 @@
   }
 
   .projectItemHeader p {
-    margin: 5px 0 20px;
+    margin: 5px 0;
     font-size: 1.05rem;
     text-align: center;
   }
